changing form labels

--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -71,8 +71,8 @@
             keyCodeID: <input type="number" name="keyCodeID" value={{result[33][0]}} disabled></br></br>
             keyCodeVersion*: <input type="number" name="keyCodeVersion" value={{result[34][0]}} required></br></br>
             keyCode*: <input type="text" name="keyCode" maxlength="200" value={{result[35][0]}} required></br></br>
-            codeActive*: <input type="number" name="codeActive" value={{result[36][0]}} required></br></br>
-            codeActivationDate: <input type="date" name="codeActivationDate" value={{result[37][0]}}></br></br></br></br>
+            keyCodeActive*: <input type="number" name="codeActive" value={{result[36][0]}} required></br></br>
+            keyCodeActivationDate: <input type="date" name="codeActivationDate" value={{result[37][0]}}></br></br></br></br>
 
             <button type="submit" value="submit">Submit</button></br></br></br></br>
         </form> </br></br>
