--- a/templates/paymentschedule_form.html
+++ b/templates/paymentschedule_form.html
@@ -20,6 +20,7 @@
         value*: <input type="number" name="value" step="0.01" required ></br></br>
         frequency in days*: <input type="number" name="frequency" step="0.01" required></br></br>
         firstPaymentDate: <input type="date" name="firstPaymentDate"></br></br>
+        paymentScheduleStartDate:  <input type="date" name="paymentScheduleStartDate"></br></br>
         lastPaymentDate: <input type="date" name="lastPaymentDate"></br></br>
         active*: <input type="number" name="active" min="0" max="1" placeholder="type '0' for 'no' and '1' for 'yes'" required ></br></br>
         customerID*: <input type="number" name="customerID" maxlength="11" required><br><br></br></br>
