making the form work by changing the form action path

--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -18,9 +18,9 @@
         {% if spcific_record_all_tables %}
         {% for result in spcific_record_all_tables %}
 
-        <h2>Edit record {{result[0][0]}} - {{result[1][0]}} - {{result[2][0]}}</h2>
+        <h2>Edit record  - {{result[1][0]}} - {{result[2][0]}}</h2>
 
-        <form class="pure-form" name="edit_form" method="POST" action='/'>
+        <form class="pure-form" name="edit_form" method="POST" action='/edit_record/1'>
             <label>Customer</label></br></br>
 
             customerID: <input type="number" name="customerID" value={{result[0][0]}} disabled><br><br>
