--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -18,19 +18,19 @@
         {% if spcific_record_all_tables %}
         {% for result in spcific_record_all_tables %}
 
-        <h2>Edit record  - {{result[1][0]}} - {{result[2][0]}}</h2>
+        <h2>Edit record  - {{result[1]}} - {{result[2]}}</h2>
 
-        <form class="pure-form" name="edit_form" method="POST" action='/edit_record/1'>
+        <form class="pure-form" name="edit_form" method="POST" action="/edit_record/{{result[0]}}">
             <label>Customer</label></br></br>
 
-            customerID: <input type="number" name="customerID" value={{result[0][0]}} disabled><br><br>
-            rbCustomerID*: <input type="text" name="rbCustomerID" maxlength="50" value={{result[1][0]}} required></br></br>
-            companyName*: <input type="text" name="companyName" maxlength="200" value={{result[2][0]}} required></br></br>
-            companyLocalID*: <input type="text" name="companyLocalID" maxlength="200" value={{result[3][0]}} required></br></br>
-            companyLocalIDType*: <input type="text" name="companyLocalIDType" maxlength="100" value={{result[4][0]}} required></br></br>
-            custTypeID*: <input type="number" name="custTypeID" value={{result[5][0]}} required></br></br>
-            startDate: <input type="date" name="startDate" value={{result[6][0]}}></br></br>
-            domicile*: <input type="text" name="domicile" maxlength="2" value={{result[7][0]}} required></br></br></br></br>
+            customerID: <input type="number" name="customerID" value={{result[0]}} disabled><br><br>
+            rbCustomerID*: <input type="text" name="rbCustomerID" maxlength="50" value={{result[1]}} required></br></br>
+            companyName*: <input type="text" name="companyName" maxlength="200" value={{result[2]}} required></br></br>
+            companyLocalID*: <input type="text" name="companyLocalID" maxlength="200" value={{result[3]}} required></br></br>
+            companyLocalIDType*: <input type="text" name="companyLocalIDType" maxlength="100" value={{result[4]}} required></br></br>
+            custTypeID*: <input type="number" name="custTypeID" value={{result[5]}} required></br></br>
+            startDate: <input type="date" name="startDate" value={{result[6]}}></br></br>
+            domicile*: <input type="text" name="domicile" maxlength="2" value={{result[7]}} required></br></br></br></br>
 
         <!--    <label>PaymentSchedule</label></br></br>
             paymentScheduleID: <input type="number" name="paymentScheduleID" value={{result[8][0]}} disabled></br></br>
