added a payment part of the edit form

--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -32,7 +32,7 @@
             startDate: <input type="date" name="startDate" value={{result[6]}}></br></br>
             domicile*: <input type="text" name="domicile" maxlength="2" value={{result[7]}} required></br></br></br></br>
 
-        <!--    <label>PaymentSchedule</label></br></br>
+           <label>PaymentSchedule</label></br></br>
             paymentScheduleID: <input type="number" name="paymentScheduleID" value={{result[8][0]}} disabled></br></br>
             value*: <input type="number" name="value" step="0.01" value={{result[9][0]}} required ></br></br>
             frequency in days*: <input type="number" name="frequency" step="0.01" value={{result[10][0]}} required></br></br>
@@ -40,7 +40,7 @@
             paymentScheduleStartDate: <input type="date" name="paymentScheduleStartDate" value={{result[12][0]}}></br></br>
             lastPaymentDate: <input type="date" name="lastPaymentDate" value={{result[13][0]}}></br></br>
             active*: <input type="number" name="active" min="0" max="1" value={{result[14][0]}} required ></br></br></br></br>
-
+<!--
             <label>Licence</label></br></br>
             licenceID: <input type="number" name="licenceID" value={{result[15][0]}} disabled></br></br>
             type*: <input type="number" name="type" value={{result[16][0]}} required></br></br>
