updating and inserting with the file empty or recorde doesnt exist"

--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -33,7 +33,7 @@
             domicile*: <input type="text" name="domicile" maxlength="2" value={{result[7]}} required></br></br></br></br>
 
            <label>PaymentSchedule</label></br></br>
-            paymentScheduleID: <input type="number" name="paymentScheduleID" value={{result[8][0]}} disabled></br></br>
+            paymentScheduleID: <input type="number" name="paymentScheduleID" value={{result[8][0]}}></br></br>
             value*: <input type="number" name="value" step="0.01" value={{result[9][0]}} required ></br></br>
             frequency in days*: <input type="number" name="frequency" step="0.01" value={{result[10][0]}} required></br></br>
             firstPaymentDate: <input type="date" name="firstPaymentDate" value={{result[11][0]}}></br></br>
